test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: bad format in channel.read(inout a:bool) with path "readWriteBool.stdin" offset 11
